feat: october support

--- a/src/app/i18n/locales/en/navigation.json
+++ b/src/app/i18n/locales/en/navigation.json
@@ -2,5 +2,6 @@
   "about_us": "About us",
   "how_it_works": "How it works?",
   "calculator": "Calculator",
-  "marketplaces": "Marketplaces"
+  "marketplaces": "Marketplaces",
+  "leave_contacts": "Leave contacts, we will call you back"
 }
