--- a/src/app/i18n/locales/kz/admin.json
+++ b/src/app/i18n/locales/kz/admin.json
@@ -7,6 +7,8 @@
     "approved": "Алушы сәтті мақұлданды",
     "error_approving": "Алушыны мақұлдау қатесі"
   },
-  "marketplaces": "Маркетплейстар"
+  "marketplaces": "Маркетплейстар",
+  "contacts": "Нөмірлер"
+
 
 }
