--- a/src/app/i18n/locales/ru/delivery.json
+++ b/src/app/i18n/locales/ru/delivery.json
@@ -20,72 +20,6 @@
   "open": "Посмотреть",
   "view_more": "Перейти по ссылке",
   "order_history": "История заказа",
-  "Sended_from_FLS": "Передано в корпоративный участок",
-  "ArrivedCorpDep": "Прибыло в корпоративный участок",
-  "DeliveredPVZ": "Принято на хранение в пункте выдачи заказов",
-  "HandedPVZ": "Вручено в пункте выдачи заказов",
-  "ReturnedPVZ": "Возврат из пункта выдачи заказов",
-  "DeliveredSVX": "На хранении под наблюдением таможни",
-  "Registered": "Принято почтовое отправление",
-  "Departed": "Отправлено из центра сортировки",
-  "Transit": "Прибытие в центр сортировки",
-  "Arrived": "Прибытие в центр сортировки",
-  "AtCustom": "Передано на таможенный досмотр",
-  "FromCustom": "Выпущен с таможни",
-  "Redirected": "Перенаправлено",
-  "ReturnedToCompany": "Почтовое отправление возвращено",
-  "Postcripted": "Прибытие в центр сортировки",
-  "AbonementBox": "Поступило в место выдачи",
-  "BAT": "Принято почтовое отправление",
-  "RCPOPS": "Принято почтовое отправление",
-  "DLV": "Передано почтальону/курьеру на доставку",
-  "DPAY": "Вручено",
-  "NONDLV": "Доставка почтальоном/курьером не состоялась",
-  "ISSPAY": "Вручено",
-  "ISSSC": "Вручено",
-  "STRSC": "Ожидает получателя в пункте выдачи",
-  "Forwarded": "Перенаправлено",
-  "Delivered": "Ожидает получателя в пункте выдачи",
-  "Handed": "Вручено",
-  "RET": "Почтовое отправление возвращено",
-  "RETSTR": "Почтовое отправление возвращено",
-  "SM_STR": "Ожидает получателя в пункте выдачи",
-  "PAY_COD": "оплата наложенного платежа",
-  "CUSTOM_RET": "Возвращено с таможни",
-  "STR": "Принятие на хранение",
-  "RETSCSTR": "Почтовое отправление возвращено",
-  "RDR": "Перенаправлено",
-  "RDRSTR": "Перенаправлено",
-  "RDRSC": "Перенаправлено",
-  "RDRSCSTR": "Перенаправлено",
-  "BOXISS": "Вручено",
-  "DLV_POBOX": "Вложено в абонентский ящик",
-  "SNDZONE_T": "Выпущено таможней",
-  "SNDDELAY": "Выпущен с таможни (был под наблюдением таможни)",
-  "RPODELAY": "РПО под наблюдением таможни",
-  "CORRECT": "Вручено",
-  "PRC": "Прибыло в центр сортировки",
-  "SND": "Отправлено из центра сортировки",
-  "TRANSITRCV": "Прибыло в центр сортировки",
-  "TRANSITSND": "Отправлено из центра сортировки",
-  "RETCC": "Почтовое отправление возвращено",
-  "RETSC": "Почтовое отправление возвращено",
-  "RCP_I": "Принято почтовое отправление для отправки",
-  "RCP_O": "Принято почтовое отправление для отправки",
-  "RCPOPS_I": "Принято почтовое отправление для отправки",
-  "RCPOPS_O": "Принято почтовое отправление для отправки",
-  "BOXISS_I": "вручено ",
-  "BOXISS_O": "вручено ",
-  "DLV_I": "Передано почтальону/курьеру на доставку",
-  "DLV_O": "Передано почтальону/курьеру на доставку",
-  "DLV_POBOX_I": "вручено ",
-  "DLV_POBOX_O": "вручено ",
-  "DPAY_I": "вручено ",
-  "DPAY_O": "вручено ",
-  "ISSPAY_I": "вручено ",
-  "ISSPAY_O": "вручено ",
-  "ISSSC_I": "вручено ",
-  "ISSSC_O": "вручено ",
   "STR_EMS": "Принято в пункте выдачи",
   "RET_I": "Почтовое отправление возвращено",
   "RET_O": "Почтовое отправление возвращено",
@@ -127,7 +61,143 @@
   "EDG": "Передано почтальону/курьеру на доставку",
   "EDH": "Прибыло в пункт выдачи",
   "EDX": "Импорт отменен",
-  "DLV_HAND": "Доставлено курьером"
+    "DLV_HAND": "Доставлено курьером",
+  "ReturnedCompany": "Почтовое отправление возвращено",
+  "STR_CLIENT": "В ожидании клиента",
+  "Sended_from_FLS": "Передано в корпоративный участок",
+  "ArrivedCorpDep": "Прибыло в корпоративный участок",
+  "DeliveredPVZ": "Принято на хранение в пункте выдачи заказов",
+  "HandedPVZ": "Вручено в пункте выдачи заказов",
+  "ReturnedPVZ": "Возврат из пункта выдачи заказов",
+  "DeliveredSVX": "На хранении под наблюдением таможни",
+  "Registered": "Принято почтовое отправление",
+  "PacketList": "Не транслировать в клиентский сервис",
+  "LabelList": "Не транслировать в клиентский сервис",
+  "DestinationList": "Не транслировать в клиентский сервис",
+  "DestinationListInternational": "Не транслировать в клиентский сервис",
+  "TransportList": "Не транслировать в клиентский сервис",
+  "Departed": "Отправлено из центра сортировки",
+  "Transit": "Прибытие в центр сортировки",
+  "Arrived": "Прибытие в центр сортировки",
+  "Collated": "Не транслировать в клиентский сервис",
+  "AtCustom": "Передано на таможенный досмотр",
+  "FromCustom": "Выпущен с таможни",
+  "DetainedByCustom": "Не транслировать в клиентский сервис",
+  "Act": "Не транслировать в клиентский сервис",
+  "Act_B": "Не транслировать в клиентский сервис",
+  "Act_G": "Не транслировать в клиентский сервис",
+  "Act_S": "Не транслировать в клиентский сервис",
+  "Returned": "Не транслировать в клиентский сервис",
+  "Adjustment": "Не транслировать в клиентский сервис",
+  "RemovedFromForeign": "Не транслировать в клиентский сервис",
+  "Redirected": "Перенаправлено",
+  "ReturnedToCompany": "Почтовое отправление возвращено",
+  "Postcripted": "Прибытие в центр сортировки",
+  "AbonementBox": "Поступило в место выдачи",
+  "AddedToDeliveryList": "Не транслировать в клиентский сервис",
+  "BAT": "Принято почтовое отправление",
+  "RCPOPS": "Принято почтовое отправление",
+  "SND_U": "Не транслировать в клиентский сервис",
+  "DLVADD": "Не транслировать в клиентский сервис",
+  "DLVADD_UNDO": "Не транслировать в клиентский сервис",
+  "DLV": "Передано почтальону/курьеру на доставку",
+  "DLVPAY": "Не транслировать в клиентский сервис",
+  "DLV_UNDO": "Не транслировать в клиентский сервис",
+  "DPAY": "Вручено",
+  "NONDLV": "Доставка почтальоном/курьером не состоялась",
+  "ISSPAY": "Вручено",
+  "ISSSC": "Вручено",
+  "STRSC": "Ожидает получателя в пункте выдачи",
+  "NONDST": "Не транслировать в клиентский сервис",
+  "SendedToDeadLetter": "Не транслировать в клиентский сервис",
+  "Forwarded": "Перенаправлено",
+  "Destroyed": "Не транслировать в клиентский сервис",
+  "Delivered": "Ожидает получателя в пункте выдачи",
+  "Handed": "Вручено",
+  "RET": "Почтовое отправление возвращено",
+  "RETSTR": "Почтовое отправление возвращено",
+  "SM_STR": "Ожидает получателя в пункте выдачи",
+  "TO_CUSTOM": "Не транслировать в клиентский сервис",
+  "PAY_COD": "Не транслировать в клиентский сервис",
+  "FROM_CUSTOM": "Не транслировать в клиентский сервис",
+  "SRT_CUSTOM": "Не транслировать в клиентский сервис",
+  "CUSTOM_RET": "Возвращено с таможни",
+  "STR": "Принятие на хранение",
+  "RETSCSTR": "Почтовое отправление возвращено",
+  "RDR": "Перенаправлено",
+  "RDRSTR": "Перенаправлено",
+  "RDRSC": "Перенаправлено",
+  "RDRSCSTR": "Перенаправлено",
+  "BOXISS": "Вручено",
+  "UTL": "Не транслировать в клиентский сервис",
+  "DLV_POBOX": "Вложено в абонентский ящик",
+  "STR_EXTEND": "Не транслировать в клиентский сервис",
+  "SNDZONE_T": "Выпущено таможней",
+  "SNDDELAY": "Выпущен с таможни",
+  "RPODELAY": "РПО под наблюдением таможни",
+  "FPA": "Не транслировать в клиентский сервис",
+  "CORRECT": "Вручено",
+  "SRTRPOREG": "Не транслировать в клиентский сервис",
+  "PRC": "Прибыло в центр сортировки",
+  "TRN_ADD": "Не транслировать в клиентский сервис",
+  "TRNBAG": "Не транслировать в клиентский сервис",
+  "SND": "Отправлено из центра сортировки",
+  "TRANSITRCV": "Прибыло в центр сортировки",
+  "TRANSITSND": "Отправлено из центра сортировки",
+  "TRN": "Не транслировать в клиентский сервис",
+  "RETCC": "Почтовое отправление возвращено",
+  "BOXISS_UNDO": "Не транслировать в клиентский сервис",
+  "DLV_POBOX_UNDO": "Не транслировать в клиентский сервис",
+  "ISSPAY_UNDO": "Не транслировать в клиентский сервис",
+  "ISSSC_UNDO": "Не транслировать в клиентский сервис",
+  "NONDST_UNDO": "Не транслировать в клиентский сервис",
+  "UTL_UNDO": "Не транслировать в клиентский сервис",
+  "RETSC": "Почтовое отправление возвращено",
+  "STR_EXTEND_UNDO": "Не транслировать в клиентский сервис",
+  "STR_UNDO": "Не транслировать в клиентский сервис",
+  "STRSC_UNDO": "Не транслировать в клиентский сервис",
+  "RET_UNDO": "Не транслировать в клиентский сервис",
+  "RETSTR_UNDO": "Не транслировать в клиентский сервис",
+  "RETSC_UNDO": "Не транслировать в клиентский сервис",
+  "RETSCSTR_UNDO": "Не транслировать в клиентский сервис",
+  "RDR_UNDO": "Не транслировать в клиентский сервис",
+  "RDRSTR_UNDO": "Не транслировать в клиентский сервис",
+  "RDRSC_UNDO": "Не транслировать в клиентский сервис",
+  "RDRSCSTR_UNDO": "Не транслировать в клиентский сервис",
+  "SRTRPOREG_UNDO": "Не транслировать в клиентский сервис",
+  "SRT_CUSTOM_UNDO": "Не транслировать в клиентский сервис",
+  "RETCC_UNDO": "Не транслировать в клиентский сервис",
+  "FPASC_UNDO": "Не транслировать в клиентский сервис",
+  "RCP_I": "Принято почтовое отправление для отправки",
+  "RCP_O": "Принято почтовое отправление для отправки",
+  "RCPOPS_I": "Принято почтовое отправление для отправки",
+  "RCPOPS_O": "Принято почтовое отправление для отправки",
+  "BAT_I": "Не транслировать в клиентский сервис",
+  "BAT_O": "Не транслировать в клиентский сервис",
+  "BOXISS_I": "Вручено",
+  "BOXISS_O": "Вручено",
+  "DLV_I": "Передано почтальону/курьеру на доставку",
+  "DLV_O": "Передано почтальону/курьеру на доставку",
+  "DLV_POBOX_I": "Вручено",
+  "DLV_POBOX_O": "Вручено",
+  "DPAY_I": "Вручено",
+  "DPAY_O": "Вручено",
+  "ISSPAY_I": "Вручено",
+  "ISSPAY_O": "Вручено",
+  "ISSSC_I": "Вручено",
+  "ISSSC_O": "Вручено",
+  "STR_I": "Не транслировать в клиентский сервис",
+  "STR_O": "Не транслировать в клиентский сервис",
+  "STRSC_I": "Не транслировать в клиентский сервис",
+  "STRSC_O": "Не транслировать в клиентский сервис",
+  "SRTRPOREG_I": "Не транслировать в клиентский сервис",
+  "SRTRPOREG_O": "Не транслировать в клиентский сервис",
+  "PRC_I": "Не транслировать в клиентский сервис",
+  "PRC_O": "Не транслировать в клиентский сервис",
+  "ISSPAY_UNDO_I": "Не транслировать в клиентский сервис",
+  "ISSPAY_UNDO_O": "Не транслировать в клиентский сервис",
+  "ISSSC_UNDO_I": "Не транслировать в клиентский сервис",
+  "ISSSC_UNDO_O": "Не транслировать в клиентский сервис"
 
 
 }
