--- a/src/app/i18n/locales/en/admin.json
+++ b/src/app/i18n/locales/en/admin.json
@@ -7,6 +7,8 @@
     "approved": "Recipient approved successfully",
     "error_approving": "Error approving recipient"
   },
-  "marketplaces": "Marketplaces"
+  "marketplaces": "Marketplaces",
+  "contacts": "Contacts"
+
 
 }
