--- a/src/app/i18n/locales/zh/admin.json
+++ b/src/app/i18n/locales/zh/admin.json
@@ -6,5 +6,8 @@
     "approving": "批准用户...",
     "approved": "用户已批准",
     "error_approving": "批准用户时出错"
-  }
+  },
+  "marketplaces": "Marketplaces",
+  "contacts": "Contacts"
+
 }
