fix: upload deliveru

--- a/src/app/i18n/locales/ru/profile.json
+++ b/src/app/i18n/locales/ru/profile.json
@@ -34,7 +34,7 @@
     "error_saving_recipient": "Ошибка сохранения данных получателя",
     "add_recipient": "Добавить нового получателя",
     "add": "Сохранить нового получателя",
-    "edit": "Редактировать"
-
+    "edit": "Редактировать",
+    "saving": "Сохранение..."
   }
 }
