--- a/src/app/i18n/locales/en/how_it_works.json
+++ b/src/app/i18n/locales/en/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "How it works?",
   "first_step": "Register and receive a foreign address",
-  "second_step": "Place an order on a foreign marketplace to the issued address.\n\nAfter receiving the parcel at our warehouse, you pay for delivery",
+  "second_step": "Place an order on a foreign marketplace to the provided address and register it on our website.\n\nAfter receiving the parcel at our warehouse, you pay for delivery based on volumetric weight",
   "third_step": "We deliver your parcel within 7-10 days"
 }
