--- a/src/app/i18n/locales/kz/calculator.json
+++ b/src/app/i18n/locales/kz/calculator.json
@@ -1,6 +1,6 @@
 {
   "title": "Калькулятор",
-  "description": "Жеткізу құнын есептеңіз",
+  "description": "Жеткізу құнын есептеңіз. Көлемдік салмақты ескереміз.",
   "country": "Жеткізу елі",
   "weight": "Салмағы (кг)",
   "price": "Бағасы",
