--- a/src/app/i18n/locales/kz/how_it_works.json
+++ b/src/app/i18n/locales/kz/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "Ол қалай жұмыс істейді?",
   "first_step": "Тіркеліңіз және шетел мекенжайын алыңыз",
-  "second_step": "Берілген мекенжай бойынша сыртқы маркетплейсте тапсырыс беріңіз.\n\nБіздің қоймадан сәлемдемені алған тұста, жеткізу ақысын төлеңіз.",
+  "second_step": "Берілген мекенжай бойынша шетелдік нарықта тапсырыс беріңіз және оны біздің веб-сайтта тіркеңіз.\n\nБіздің қоймадан сәлемдемені алған тұста, жеткізу ақысын көлемдік салмақ бойынша төлейсіз",
   "third_step": "Біз сіздің сәлемдемеңізді 7-10 күн ішінде жеткіземіз."
 }
