--- a/src/app/i18n/locales/ru/calculator.json
+++ b/src/app/i18n/locales/ru/calculator.json
@@ -1,6 +1,6 @@
 {
   "title": "Калькулятор",
-  "description": "Рассчитайте стоимость вашей доставки",
+  "description": "Рассчитайте стоимость вашей доставки. Учитываем объемный вес.",
   "country": "Страна доставки",
   "weight": "Вес (кг)",
   "price": "Цена",
