--- a/src/app/i18n/locales/ru/how_it_works.json
+++ b/src/app/i18n/locales/ru/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "Как это работает?",
   "first_step": "Проходите регистрацию и получаете иностранный адрес",
-  "second_step": "Делаете заказ на иностранном маркетплейсе на выданный адрес.\n\nПосле получения посылки на нашем складе, оплачиваете доставку",
+  "second_step": "Делаете заказ на иностранном маркетплейсе на выданный адрес и регистрируете его на нашем сайте.\n\nПосле получения посылки на нашем складе, оплачиваете доставку по объемному весу",
   "third_step": "Мы доставляем вашу посылку в течение 7-10 дней"
 }
