--- a/src/app/i18n/locales/zh/how_it_works.json
+++ b/src/app/i18n/locales/zh/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "怎么运行的？",
   "first_step": "註冊並接收國外地址",
-  "second_step": "在國外市場上向所發布的地址下訂單。\n\n在我们的仓库收到包裹后，您支付运费",
+  "second_step": "在国外市场向指定地址下订单并在我们的网站上注册。\n\n在我们仓库收到包裹后，您按体积重量支付运费",
   "third_step": "我們會在 7-10 天內送達您的包裹"
 }
