--- a/src/app/i18n/locales/zh/calculator.json
+++ b/src/app/i18n/locales/zh/calculator.json
@@ -1,6 +1,6 @@
 {
   "title": "计算器",
-  "description": "计算您的送货成本",
+  "description": "计算您的送货成本。我们考虑体积重量。",
   "country": "交货国家",
   "weight": "重量（公斤）",
   "price": "价格",
