--- a/src/app/i18n/locales/zh/order.json
+++ b/src/app/i18n/locales/zh/order.json
@@ -14,6 +14,7 @@
   "invoice": "发票",
   "description": "产品描述",
   "original_box": "保留原始产品包装盒",
+  "original_box_for_korea": "删除多余的盒子只需 3 美元",
   "add_product": "+ 添加产品",
   "recipient": "接受者",
   "create_order": "添加",
@@ -24,5 +25,8 @@
   "in_the_way": "在路上",
   "in_your_country": "在您的国家",
   "in_mail_office": "在邮局",
-  "delivered": "已交付"
+  "delivered": "已交付",
+  "checkbox_toast_message": "这将有助于减少体积重量",
+  "volume_weight_info": "收到包裹时，请考虑体积重量"
+
 }
