refactor:order card in admin panel

--- a/src/app/i18n/locales/kz/header.json
+++ b/src/app/i18n/locales/kz/header.json
@@ -1,5 +1,6 @@
 {
   "login": "Кіру",
   "logout": "Шығу",
-  "register": "Тіркелу"
+  "register": "Тіркелу",
+  "call_us": "Бізбен хабарласыңыз!"
 }
