--- a/src/app/i18n/locales/ru/header.json
+++ b/src/app/i18n/locales/ru/header.json
@@ -1,5 +1,6 @@
 {
   "login": "Вход",
   "logout": "Выход",
-  "register": "Регистрация"
+  "register": "Регистрация",
+  "call_us": "Свяжитесь с нами!"
 }
