--- a/src/app/i18n/locales/en/order.json
+++ b/src/app/i18n/locales/en/order.json
@@ -9,6 +9,7 @@
   "tracking_number": "Tracking Number",
   "good_link": "Link to the product",
   "declaration": "Declaration",
+  "quantity": "Quantity",
   "good_name": "Product Name",
   "price": "Price",
   "invoice": "Invoice",
