--- a/src/app/i18n/locales/kz/order.json
+++ b/src/app/i18n/locales/kz/order.json
@@ -6,6 +6,7 @@
   "order_information": "Тапсырыс туралы ақпарат",
   "country": "Шығу елі",
   "order_id": "Тапсырыс идентификаторы",
+  "quantity": "Саны",
   "tracking_number": "Бақылау нөмірі",
   "good_link": "Тауарға сілтеме",
   "declaration": "Декларация",
