fix: lang and +7 in some places

--- a/src/app/i18n/locales/ru/admin.json
+++ b/src/app/i18n/locales/ru/admin.json
@@ -7,6 +7,14 @@
     "approved": "Получатель одобрен",
     "error_approving": "Ошибка одобрения получателя"
   },
+  "recipient_review": {
+    "approving": "Одобрение отправителя...",
+    "approved": "Отправитель одобрен",
+    "error_approving": "Ошибка одобрения отправителя",
+    "no_comment": "Нет комментария",
+    "click_to_copy": "Нажмите, чтобы скопировать",
+    "copied": "Скопировано"
+  },
   "marketplaces": "Маркетплейсы",
   "contacts": "Контакты"
 }
