--- a/src/app/i18n/locales/kz/description.json
+++ b/src/app/i18n/locales/kz/description.json
@@ -1,4 +1,4 @@
 {
-  "title": "Оңтүстік Кореядан және Еуропадан сәлемдемелерді жеткізу",
+  "title": "AҚШ-дан, Оңтүстік Кореядан және Еуропадан сәлемдемелерді жеткізу",
   "information": "Біз онлайн сатып алуды қолжетімді етеміз!"
 }
