--- a/src/app/i18n/locales/en/admin.json
+++ b/src/app/i18n/locales/en/admin.json
@@ -7,6 +7,7 @@
     "approved": "Recipient approved successfully",
     "error_approving": "Error approving recipient"
   },
-  "marketplaces": "Marketplaces"
+  "marketplaces": "Marketplaces",
+  "shipments": "Shipments"
 
 }
