feat: shipments spedX + shipter

--- a/src/app/i18n/locales/en/admin.json
+++ b/src/app/i18n/locales/en/admin.json
@@ -8,7 +8,7 @@
     "error_approving": "Error approving recipient"
   },
   "marketplaces": "Marketplaces",
-  "contacts": "Contacts"
-
+  "contacts": "Contacts",
+  "shipments": "Shipments"
 
 }
