--- a/src/app/i18n/locales/ru/admin.json
+++ b/src/app/i18n/locales/ru/admin.json
@@ -16,5 +16,6 @@
     "copied": "Скопировано"
   },
   "marketplaces": "Маркетплейсы",
-  "contacts": "Контакты"
+  "contacts": "Контакты",
+  "shipments": "Поставки"
 }
