--- a/src/app/i18n/locales/zh/admin.json
+++ b/src/app/i18n/locales/zh/admin.json
@@ -8,6 +8,7 @@
     "error_approving": "批准用户时出错"
   },
   "marketplaces": "Marketplaces",
-  "contacts": "Contacts"
+  "contacts": "Contacts",
+  "shipments": "Shipments"
 
 }
