--- a/src/app/i18n/locales/kz/admin.json
+++ b/src/app/i18n/locales/kz/admin.json
@@ -8,7 +8,7 @@
     "error_approving": "Алушыны мақұлдау қатесі"
   },
   "marketplaces": "Маркетплейстар",
-  "contacts": "Нөмірлер"
-
+  "contacts": "Нөмірлер",
+  "shipments": "Shipments"
 
 }
