feat: china integration & new status

--- a/src/app/i18n/locales/en/admin.json
+++ b/src/app/i18n/locales/en/admin.json
@@ -9,6 +9,7 @@
   },
   "marketplaces": "Marketplaces",
   "contacts": "Contacts",
-  "shipments": "Shipments"
+  "shipments": "Shipments",
+  "products": "Products"
 
 }
