--- a/src/app/i18n/locales/ru/admin.json
+++ b/src/app/i18n/locales/ru/admin.json
@@ -17,5 +17,6 @@
   },
   "marketplaces": "Маркетплейсы",
   "contacts": "Контакты",
-  "shipments": "Поставки"
+  "shipments": "Поставки",
+  "products": "Товары"
 }
